--- a/financial_management_system_frontend/src/index.css
+++ b/financial_management_system_frontend/src/index.css
@@ -1,3 +1,7 @@
+:root{
+  --body-bg-color : rgb(245, 245, 245);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(245, 245, 245);
+  background-color: var(--body-bg-color)
 }
 
 code {
